--- a/apps/doc/src/app/components/input/input-tree-multi-select/input-tree-multi-select.component.html
+++ b/apps/doc/src/app/components/input/input-tree-multi-select/input-tree-multi-select.component.html
@@ -6,7 +6,9 @@
     <prizm-doc-example id="projection" [content]="exampleProjection" heading="Projection">
       <prizm-tree-select-projection-example></prizm-tree-select-projection-example>
     </prizm-doc-example>
-
+    <prizm-doc-example id="only-current-mode" [content]="exampleMode" heading="Only Current">
+      <prizm-tree-select-only-current-example></prizm-tree-select-only-current-example>
+    </prizm-doc-example>
     <prizm-doc-example id="search" [content]="exampleSearch" heading="Search">
       <prizm-tree-select-search-example></prizm-tree-select-search-example>
     </prizm-doc-example>
