fix(components/confirm-dialog): add extra margin if tree buttons in footer #000

--- a/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.html
+++ b/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.html
@@ -64,7 +64,7 @@
             >
             </ng-container>
           </div>
-          <div class="bottom">
+          <div class="bottom" [class.extra-margin]="context.confirmButton && context.supportButton">
             <ng-container
               *ngIf="context.cancelButton"
               [ngTemplateOutlet]="buttonTemplate"
