--- a/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.less
+++ b/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.less
@@ -67,7 +67,11 @@
   }
 
   .bottom {
-    margin-top: 16px;
+    margin-top: 8px;
+
+    &.extra-margin {
+      margin-top: 16px;
+    }
   }
 }
 
