feat(doc/tree): add example for function access #2289

--- a/apps/doc/src/app/components/tree/tree.component.html
+++ b/apps/doc/src/app/components/tree/tree.component.html
@@ -38,6 +38,10 @@
       <prizm-tree-template-checkbox-example></prizm-tree-template-checkbox-example>
     </prizm-doc-example>
 
+    <prizm-doc-example id="custum-access-function" heading="Custum access function">
+      <prizm-tree-function-access-example></prizm-tree-function-access-example>
+    </prizm-doc-example>
+
     <prizm-doc-example id="template-lazy" [content]="exampleLazy" heading="Lazy Load">
       <prizm-tree-template-lazy-example></prizm-tree-template-lazy-example>
     </prizm-doc-example>
