feat(components/time-template): add time template directive #1140

--- a/apps/doc/src/app/components/input/input-layout-date-time/examples/custom-time-picker/input-layout-date-time-custom-time-picker-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time/examples/custom-time-picker/input-layout-date-time-custom-time-picker-example.component.html
@@ -3,9 +3,9 @@
     #dateTime
     [enabled]="false"
     [formControl]="control"
-    [timePickerTemplate]="pickerTemplate"
     [min]="min"
     [max]="max"
+    [prizmTimeTemplate]="pickerTemplate"
     prizmDropdownHostControl
   ></prizm-input-layout-date-time>
 </prizm-input-layout>
