--- a/apps/doc/src/app/components/input/input-layout-time/examples/custom-time-picker/input-layout-time-custom-time-picker-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-time/examples/custom-time-picker/input-layout-time-custom-time-picker-example.component.html
@@ -2,7 +2,7 @@
   <prizm-input-layout-time
     #timeControl
     [ngModel]="time"
-    [timePickerTemplate]="pickerTemplate"
+    [prizmTimeTemplate]="pickerTemplate"
   ></prizm-input-layout-time>
 </prizm-input-layout>
 
