--- a/libs/components/src/lib/components/input/input-date-time/input-layout-date-time.component.html
+++ b/libs/components/src/lib/components/input/input-date-time/input-layout-date-time.component.html
@@ -5,7 +5,7 @@
   [canOpen]="!disabled"
   [prizmDropdownHost]="layoutComponent?.el?.nativeElement"
   [content]="$any(getTemplate(dropdownTimeTemplate, dropdownDateTemplate))"
-  [prizmDropdownHostWidth]="openTimeTemplate && !timePickerTemplate ? '100%' : 'auto'"
+  [prizmDropdownHostWidth]="openTimeTemplate && !timePickerCustomTemplate ? '100%' : 'auto'"
   [isOpen]="!disabled && (openTimeTemplate || open)"
   [closeByEsc]="true"
   (isOpenChange)="onOpenChange($event); $event && prizmDropdownHostComponent.reCalculatePositions()"
@@ -100,15 +100,15 @@
 <ng-template #dropdownTimeTemplate>
   <prizm-data-list
     class="block"
-    *ngIf="timeItems.length || timePickerTemplate"
+    *ngIf="timeItems.length || timePickerCustomTemplate"
     [style.--prizm-data-list-border]="0"
-    [defaultStyle]="!timePickerTemplate"
-    [scroll]="timePickerTemplate ? 'none' : 'auto'"
+    [defaultStyle]="!timePickerCustomTemplate"
+    [scroll]="timePickerCustomTemplate ? 'none' : 'auto'"
     (prizmAfterViewInit)="markAsTouched(); prizmDropdownHostComponent.reCalculatePositions()"
     (prizmOnDestroy)="openTimeTemplate = false"
     prizmLifecycle
   >
-    <ng-container *polymorphOutlet="timePickerTemplate">
+    <ng-container *polymorphOutlet="timePickerCustomTemplate?.prizmTimeTemplate">
       <ng-container>
         <prizm-listing-item
           *ngFor="let item of timeItems | prizmTimeConstraints : calendarValue : _min : _max; let idx = index"
