--- a/libs/components/src/lib/components/input/input-time/input-layout-time.component.html
+++ b/libs/components/src/lib/components/input/input-time/input-layout-time.component.html
@@ -2,7 +2,7 @@
   class="z-wrapper"
   [canOpen]="interactive && !!filtered.length"
   [content]="dropdownContent"
-  [prizmDropdownHostWidth]="!timePickerTemplate ? '100%' : 'auto'"
+  [prizmDropdownHostWidth]="!timePickerCustomTemplate ? '100%' : 'auto'"
   [isOpen]="interactive && open && !!filtered.length"
   [closeByEsc]="true"
   [prizmDropdownHost]="layoutComponent?.el?.nativeElement"
@@ -30,12 +30,12 @@
   <prizm-data-list
     class="block"
     [style.--prizm-data-list-border]="0"
-    [defaultStyle]="!timePickerTemplate"
-    [scroll]="timePickerTemplate ? 'none' : 'auto'"
+    [defaultStyle]="!timePickerCustomTemplate"
+    [scroll]="timePickerCustomTemplate ? 'none' : 'auto'"
     (prizmAfterViewInit)="markAsTouched()"
   >
-    <ng-container *ngIf="items?.length || timePickerTemplate">
-      <ng-container *polymorphOutlet="timePickerTemplate">
+    <ng-container *ngIf="items?.length || timePickerCustomTemplate">
+      <ng-container *polymorphOutlet="timePickerCustomTemplate?.prizmTimeTemplate">
         <prizm-listing-item
           *ngFor="let item of filtered; let idx = index"
           [selected]="value && item.isSameTime(value)"
