feat(components/tree): add input func to detect tree node expand state #2289

--- a/apps/doc/src/app/components/tree/examples/function-access/function-access-example.component.html
+++ b/apps/doc/src/app/components/tree/examples/function-access/function-access-example.component.html
@@ -2,7 +2,9 @@
   <prizm-tree
     [childrenHandler]="childrenHandler"
     [content]="nodeTemplate"
+    [map]="expandMap"
     [prizmTreeController]="false"
+    [prizmTreeItemExpandKeyFn]="prizmTreeItemExpandKeyFn"
     [value]="tree[0]"
   ></prizm-tree>
 }
