fix(doc/time-template): improve custom time template examples #000

--- a/apps/doc/src/app/components/input/input-layout-time/examples/custom-time-picker/input-layout-time-custom-time-picker-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-time/examples/custom-time-picker/input-layout-time-custom-time-picker-example.component.html
@@ -1,7 +1,7 @@
 <prizm-input-layout label="Введите время">
   <prizm-input-layout-time
     #timeControl
-    [ngModel]="time"
+    [(ngModel)]="time"
     [prizmTimeTemplate]="pickerTemplate"
   ></prizm-input-layout-time>
 </prizm-input-layout>
