fix(components/dialogs): test id postfix setters override for dialogs #2304

--- a/apps/doc/src/app/components/dialogs/sidebar/examples/base/base.component.html
+++ b/apps/doc/src/app/components/dialogs/sidebar/examples/base/base.component.html
@@ -10,7 +10,7 @@
   </div>
 </ng-template>
 <div style="margin-top: 16px">
-  <prizm-doc-documentation [hasTestId]="false">
+  <prizm-doc-documentation #doc [hasTestId]="true">
     <ng-template
       [(documentationPropertyValue)]="position"
       [documentationPropertyValues]="positionVariants"
