--- a/apps/doc/src/app/components/dialogs/dialog/examples/base/dialog-base-example.component.html
+++ b/apps/doc/src/app/components/dialogs/dialog/examples/base/dialog-base-example.component.html
@@ -1,7 +1,7 @@
 <button (click)="show()" type="button" prizmButton>Show Dialog</button>
 
 <div style="margin-top: 16px">
-  <prizm-doc-documentation [hasTestId]="false">
+  <prizm-doc-documentation #doc [hasTestId]="true">
     <ng-template
       [(documentationPropertyValue)]="position"
       [documentationPropertyValues]="positionVariants"
