--- a/apps/doc/src/app/addons/query-builder/examples/query-builder-basic-example/query-builder-basic-example.component.html
+++ b/apps/doc/src/app/addons/query-builder/examples/query-builder-basic-example/query-builder-basic-example.component.html
@@ -1,4 +1,4 @@
-<prizm-query-builder [expression]="expression">
+<prizm-query-builder [expression]="expression" [testId]="'base'">
   <ng-container *prizmQueryBuilderCondition="let form">
     <div class="condition-wrapper">
       <prizm-input-layout [size]="'m'"><input [formControl]="form.field" prizmInput /></prizm-input-layout>
