feat(components/time-picker): add only hour edit mode #2298

--- a/apps/doc/src/app/components/time-picker/time-picker-example.component.html
+++ b/apps/doc/src/app/components/time-picker/time-picker-example.component.html
@@ -26,7 +26,7 @@
         [(documentationPropertyValue)]="timeMode"
         [documentationPropertyValues]="timeModeVariants"
         documentationPropertyName="timeMode"
-        documentationPropertyType="'HH:MM:SS' | 'HH:MM'"
+        documentationPropertyType="'HH:MM:SS' | 'HH:MM' | 'HH'"
         documentationPropertyMode="input"
       >
         timeMode
