--- a/libs/components/src/lib/components/internal/primitive-time-pagination/primitive-time-pagination.component.less
+++ b/libs/components/src/lib/components/internal/primitive-time-pagination/primitive-time-pagination.component.less
@@ -18,6 +18,11 @@
     width: 40px;
     align-items: center;
     justify-content: center;
+
+    &:disabled {
+      text-decoration: line-through;
+      color: var(--prizm-text-icon-disable);
+    }
   }
 
   .time-separator {
