fix(components/switcher): wrong set touched state #2180

--- a/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.html
+++ b/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.html
@@ -1,4 +1,5 @@
 <button
+  (blur)="switcherControlDirective.onTouched()"
   class="switcher switcher-text"
   [class.has-value]="prizmHasValue.hasVal$ | async"
   [disabled]="isDisabled"
