--- a/libs/components/src/lib/components/accordion/components/accordion-item/accordion-item.component.less
+++ b/libs/components/src/lib/components/accordion/components/accordion-item/accordion-item.component.less
@@ -18,6 +18,12 @@
     position: relative;
   }
 
+  &.accordion_disabled {
+    &__header {
+      cursor: not-allowed;
+    }
+  }
+
   &__header {
     height: 48px;
     padding: 0 16px;
