fix(components/switcher): after blur did not set touch state #0

--- a/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.html
+++ b/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.html
@@ -4,6 +4,7 @@
   [disabled]="isDisabled"
   [icon]="icon"
   [size]="size"
+  (blur)="switcherControlDirective.onTouched()"
   [appearanceType]="appearanceTypeDirective.appearanceType"
   [appearance]="appearanceDirective.appearance"
   [class.switcher_active_disabled]="isActive && isDisabled"
