fix(components/accordion): cursor pointer state #2141

--- a/libs/components/src/lib/components/accordion/components/accordion-item/accordion-item.component.less
+++ b/libs/components/src/lib/components/accordion/components/accordion-item/accordion-item.component.less
@@ -101,10 +101,9 @@
 
   &_disabled {
     & > .accordion__header .title,
-    & > .accordion__header,
     & > .accordion__header .header-icon {
       color: var(--prizm-text-icon-disable);
-      pointer-events: visible;
+      pointer-events: none;
     }
   }
 }
