feat(doc/calendar-year): addcustom footer example #2297

--- a/apps/doc/src/app/components/calendars/calendar-year/calendar-year-example.component.html
+++ b/apps/doc/src/app/components/calendars/calendar-year/calendar-year-example.component.html
@@ -3,6 +3,15 @@
     <prizm-doc-example id="base" [content]="baseExample" i18n-heading heading="Basic">
       <prizm-calendar-year-base-example></prizm-calendar-year-base-example>
     </prizm-doc-example>
+
+    <prizm-doc-example
+      id="custom-footer"
+      [content]="customFooterExample"
+      i18n-heading
+      heading="Custom Footer"
+    >
+      <prizm-calendar-year-custom-footer-example></prizm-calendar-year-custom-footer-example>
+    </prizm-doc-example>
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
