--- a/libs/components/src/lib/components/calendar-year/calendar-year.component.html
+++ b/libs/components/src/lib/components/calendar-year/calendar-year.component.html
@@ -9,6 +9,6 @@
     (yearClick)="onPickerYearClick($event)"
   ></prizm-primitive-year-picker>
 </prizm-scrollbar>
-<ng-container footer>
+<div class="footer">
   <ng-content select="[footer]"></ng-content>
-</ng-container>
+</div>
