--- a/libs/components/src/lib/components/calendar-year/calendar-year.component.less
+++ b/libs/components/src/lib/components/calendar-year/calendar-year.component.less
@@ -4,22 +4,19 @@
 
 :host {
   display: block;
-  height: @height;
+  height: calc(@height + var(--prizm-calendar-year-footer-height, 0));
   width: @width;
   padding: @padding;
 
-  .footer {
+  .footer:not(:empty) {
     border-top: 1px solid var(--prizm-background-stroke);
-    padding: var(--prizm-time-picker-footer-padding, @padding);
+    height: 68px;
+    padding: var(--prizm-calendar-year-footer-padding, @padding);
     max-width: 100%;
 
     display: flex;
     justify-content: space-between;
     gap: 8px;
-
-    [prizmButton] {
-      flex: 1;
-    }
   }
 }
 
