--- a/apps/doc/src/app/components/input/input-layout-year/examples/base/input-layout-year-base-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-year/examples/base/input-layout-year-base-example.component.html
@@ -1,3 +1,3 @@
-<prizm-input-layout label="Выберите месяц">
+<prizm-input-layout label="Выберите год">
   <prizm-input-layout-year [formControl]="control"></prizm-input-layout-year>
 </prizm-input-layout>
