refactor(doc/tree): add tui doc code example #2289

--- a/apps/doc/src/app/components/tree/tree.component.html
+++ b/apps/doc/src/app/components/tree/tree.component.html
@@ -38,7 +38,11 @@
       <prizm-tree-template-checkbox-example></prizm-tree-template-checkbox-example>
     </prizm-doc-example>
 
-    <prizm-doc-example id="custum-access-function" heading="Custum access function">
+    <prizm-doc-example
+      id="custum-access-function"
+      [content]="exampleAccessByIdFunction"
+      heading="Custum access function"
+    >
       <prizm-tree-function-access-example></prizm-tree-function-access-example>
     </prizm-doc-example>
 
