docs(doc/tree): fix mistype #2289

--- a/apps/doc/src/app/components/tree/tree.component.html
+++ b/apps/doc/src/app/components/tree/tree.component.html
@@ -39,9 +39,9 @@
     </prizm-doc-example>
 
     <prizm-doc-example
-      id="custum-access-function"
+      id="custom-access-function"
       [content]="exampleAccessByIdFunction"
-      heading="Custum access function"
+      heading="Custom access function"
     >
       <prizm-tree-function-access-example></prizm-tree-function-access-example>
     </prizm-doc-example>
