feat(doc/dropdown-host): added example with nested dropdown #2329

--- a/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
@@ -8,6 +8,10 @@
       <prizm-dropdown-host-example-with-template></prizm-dropdown-host-example-with-template>
     </prizm-doc-example>
 
+    <prizm-doc-example id="nested" [content]="exampleWithNested" heading="Nested">
+      <prizm-dropdown-host-example-nested></prizm-dropdown-host-example-nested>
+    </prizm-doc-example>
+
     <prizm-doc-example
       id="select-panel"
       [content]="exampleWithSelectPanel"
