fix(components/tabs): wrwrong display right button on zoomed browser viewport #988

--- a/apps/doc/src/app/components/tabs/tabs-example.component.html
+++ b/apps/doc/src/app/components/tabs/tabs-example.component.html
@@ -7,33 +7,33 @@
       <prizm-tabs-example-basic></prizm-tabs-example-basic>
     </prizm-doc-example>
 
-    <!--    <prizm-doc-example id="component" [content]="tabsExampleComponent" heading="Component">-->
-    <!--      <prizm-tabs-example-component></prizm-tabs-example-component>-->
-    <!--    </prizm-doc-example>-->
+    <prizm-doc-example id="component" [content]="tabsExampleComponent" heading="Component">
+      <prizm-tabs-example-component></prizm-tabs-example-component>
+    </prizm-doc-example>
 
-    <!--    <prizm-doc-example id="line" [content]="tabsLinedExample" heading="Lined tabs">-->
-    <!--      <prizm-tabs-example-lined></prizm-tabs-example-lined>-->
-    <!--    </prizm-doc-example>-->
+    <prizm-doc-example id="line" [content]="tabsLinedExample" heading="Lined tabs">
+      <prizm-tabs-example-lined></prizm-tabs-example-lined>
+    </prizm-doc-example>
 
-    <!--    <prizm-doc-example id="contained" [content]="tabsContainedExample" heading="Contained tabs">-->
-    <!--      <prizm-tabs-example-contained></prizm-tabs-example-contained>-->
-    <!--    </prizm-doc-example>-->
+    <prizm-doc-example id="contained" [content]="tabsContainedExample" heading="Contained tabs">
+      <prizm-tabs-example-contained></prizm-tabs-example-contained>
+    </prizm-doc-example>
 
-    <!--    <prizm-doc-example id="icon" [content]="tabsIconExample" heading="Icon tabs">-->
-    <!--      <prizm-tabs-example-icon></prizm-tabs-example-icon>-->
-    <!--    </prizm-doc-example>-->
+    <prizm-doc-example id="icon" [content]="tabsIconExample" heading="Icon tabs">
+      <prizm-tabs-example-icon></prizm-tabs-example-icon>
+    </prizm-doc-example>
 
-    <!--    <prizm-doc-example id="counter" [content]="tabsWithCounterExample" heading="Tabs with counter">-->
-    <!--      <prizm-tabs-example-counter></prizm-tabs-example-counter>-->
-    <!--    </prizm-doc-example>-->
+    <prizm-doc-example id="counter" [content]="tabsWithCounterExample" heading="Tabs with counter">
+      <prizm-tabs-example-counter></prizm-tabs-example-counter>
+    </prizm-doc-example>
 
-    <!--    <prizm-doc-example id="closable" [content]="tabsClosableExample" heading="Closable tabs">-->
-    <!--      <prizm-tabs-example-closable></prizm-tabs-example-closable>-->
-    <!--    </prizm-doc-example>-->
+    <prizm-doc-example id="closable" [content]="tabsClosableExample" heading="Closable tabs">
+      <prizm-tabs-example-closable></prizm-tabs-example-closable>
+    </prizm-doc-example>
 
-    <!--    <prizm-doc-example id="withTabs" [content]="panelWithTabsExample" heading="Panel with tabs">-->
-    <!--      <prizm-tabs-in-panel></prizm-tabs-in-panel>-->
-    <!--    </prizm-doc-example>-->
+    <prizm-doc-example id="withTabs" [content]="panelWithTabsExample" heading="Panel with tabs">
+      <prizm-tabs-in-panel></prizm-tabs-in-panel>
+    </prizm-doc-example>
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
