fix(components/multi-select): chevron overlaps input for layout with status #1744

--- a/libs/components/src/lib/components/chips/chips.component.html
+++ b/libs/components/src/lib/components/chips/chips.component.html
@@ -5,7 +5,7 @@
     *ngIf="!!chipsList?.length"
     [active]="singleLine"
     [class.hidden]="singleLine"
-    [reserveSpace]="{ x: 48 }"
+    [reserveSpace]="layoutComponent?.status === 'default' ? { x: 48 } : { x: 76 }"
     [host]="layoutComponent?.el?.nativeElement"
     prizmOverflowHost
   >
