fix(doc/dropdown-host): add disable property to live demo #2343

--- a/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
@@ -46,6 +46,7 @@
       <prizm-dropdown-host
         #element
         #dropdownTriggerClickElement="prizmDropdownTriggerClick"
+        [dropdownDisabled]="disabled"
         [(isOpen)]="isOpen"
         [content]="withHeaderAndFooter"
         [autoReposition]="autoReposition"
