feat(doc/calendar-year): improve custom footer example #000

--- a/apps/doc/src/app/components/calendars/calendar-year/examples/custom-footer/custom-footer-example.component.html
+++ b/apps/doc/src/app/components/calendars/calendar-year/examples/custom-footer/custom-footer-example.component.html
@@ -11,4 +11,5 @@
   </ng-container>
 </prizm-calendar-year>
 <br />
-<p><b>Selected:</b> {{ value }}</p>
+<p><b>Selected in calendar:</b> {{ value }}</p>
+<p><b>Applied:</b> {{ appliedValue }}</p>
