fix(components/confirm-dialog): correct  paddings #2305

--- a/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.less
+++ b/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.less
@@ -87,7 +87,7 @@
 
 .footer {
   border-top: 1px solid var(--prizm-background-stroke);
-  padding: var(--prizm-confirm-dialog-padding, 14px 16px);
+  padding: var(--prizm-confirm-dialog-padding, 16px);
   max-width: 100%;
 
   .buttons {
