--- a/libs/components/src/lib/components/dialogs/sidebar/sidebar.component.less
+++ b/libs/components/src/lib/components/dialogs/sidebar/sidebar.component.less
@@ -88,7 +88,7 @@
 
 .footer {
   border-top: 1px solid var(--prizm-background-stroke);
-  padding: var(--prizm-sidebar-footer-padding, var(--prizm-sidebar-padding, 14px 16px));
+  padding: var(--prizm-sidebar-footer-padding, var(--prizm-sidebar-padding, 16px));
   max-width: 100%;
   max-height: var(--prizm-sidebar-footer-max-height, 200px);
   overflow: hidden;
