--- a/libs/components/src/lib/directives/confirm-popup/confirm-popup-container.component.less
+++ b/libs/components/src/lib/directives/confirm-popup/confirm-popup-container.component.less
@@ -18,7 +18,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     position: relative;
-    padding: var(--prizm-confirm-popup-container-padding, 16px 14px);
+    padding: var(--prizm-confirm-popup-container-padding, 16px);
     border-radius: var(--prizm-confirm-popup-container-border-radius, 2px);
     background-color: var(--prizm-confirm-popup-container-background, var(--prizm-background-fill-overlay));
   }
