fix(doc/dropdown-host): add disable property to live demo #2343

--- a/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
@@ -47,6 +47,7 @@
         #element
         #dropdownTriggerClickElement="prizmDropdownTriggerClick"
         [(isOpen)]="isOpen"
+        [dropdownDisabled]="disabled"
         [content]="withHeaderAndFooter"
         [autoReposition]="autoReposition"
         [prizmDropdownHostWidth]="prizmDropdownHostWidth"
