feat(components/column-settings): add hint for hide button #2325

--- a/libs/components/src/lib/components/column-settings/components/column-drop-list/column-drop-list.component.html
+++ b/libs/components/src/lib/components/column-settings/components/column-drop-list/column-drop-list.component.html
@@ -18,7 +18,7 @@
           [prizmHint]="
             isLastColumnShown && column.status === 'default'
               ? (translations | prizmPluck: ['disabledHint'])
-              : ''
+              : (translations | prizmPluck: ['hideColumnHint'])
           "
           (click)="toggleColumnStatus(column)"
           prizmIconButton
