fix(components/column-settings): fix styles in component #2325

--- a/libs/components/src/lib/components/column-settings/column-settings.component.html
+++ b/libs/components/src/lib/components/column-settings/column-settings.component.html
@@ -6,7 +6,7 @@
       (click)="resetToDeafault()"
       prizmButton
       appearanceType="ghost"
-      appearance="danger"
+      appearance="secondary"
       size="m"
     >
       {{ translations | prizmPluck: ['resetBtn'] }}
