--- a/libs/components/src/lib/components/column-settings/column-settings.component.less
+++ b/libs/components/src/lib/components/column-settings/column-settings.component.less
@@ -6,7 +6,7 @@
 
   .header {
     border-bottom: 1px solid var(--prizm-background-stroke);
-    padding: var(--prizm-column-settings-header-padding, 16px);
+    padding: var(--prizm-column-settings-header-padding, 8px 16px);
     display: flex;
     justify-content: space-between;
 
@@ -31,7 +31,7 @@
       align-items: center;
       gap: 16px;
       padding: var(--prizm-column-settings-header-padding, 0px 16px);
-      margin-top: 16px;
+      margin-top: 8px;
       color: var(--prizm-text-icon-primary);
     }
 
