fix(components/column-settings): default column status should be shown only on hover #2325

--- a/libs/components/src/lib/components/column-settings/components/column-drop-list/column-drop-list.component.html
+++ b/libs/components/src/lib/components/column-settings/components/column-drop-list/column-drop-list.component.html
@@ -13,6 +13,7 @@
       <ng-container rightBox>
         <button
           [icon]="column.status | prizmColumnIcon"
+          [class.btn-hidden]="column.status === 'default'"
           [disabled]="column.status === 'sticky' || (isLastColumnShown && column.status === 'default')"
           [prizmHint]="
             isLastColumnShown && column.status === 'default'
