fix(components/column-settings): add hint pipe for column block #2325

--- a/libs/components/src/lib/components/column-settings/components/column-drop-list/column-drop-list.component.html
+++ b/libs/components/src/lib/components/column-settings/components/column-drop-list/column-drop-list.component.html
@@ -12,16 +12,10 @@
       <span>{{ column.name }}</span>
       <ng-container rightBox>
         <button
-          [icon]="column.status | prizmColumnIcon"
+          [icon]="column.status === 'hidden' ? 'eye-closed' : column.status === 'sticky' ? 'lock' : 'eye'"
           [class.btn-hidden]="column.status === 'default'"
           [disabled]="column.status === 'sticky' || (isLastColumnShown && column.status === 'default')"
-          [prizmHint]="
-            isLastColumnShown && column.status === 'default'
-              ? (translations | prizmPluck: ['disabledHint'])
-              : column.status === 'sticky'
-                ? (translations | prizmPluck: ['notHideColumnHint'])
-                : (translations | prizmPluck: ['hideColumnHint'])
-          "
+          [prizmHint]="translations | prizmColumnHint: column.status : isLastColumnShown"
           (click)="toggleColumnStatus(column)"
           prizmIconButton
           appearanceType="ghost"
