--- a/libs/components/src/lib/components/input/input-year/input-layout-year.component.html
+++ b/libs/components/src/lib/components/input/input-year/input-layout-year.component.html
@@ -15,7 +15,7 @@
     [disabled]="disabled"
     mask="0000"
     [ngModel]="value?.year"
-    [ngModelOptions]="{ standalone: true }"
+    [ngModelOptions]="{ updateOn: 'blur', standalone: true }"
     (ngModelChange)="onValueChange($event)"
     prizmInput
   />
