feat(doc): new ai component #0

--- a/apps/doc/src/app/components/tabs/tabs-example.component.html
+++ b/apps/doc/src/app/components/tabs/tabs-example.component.html
@@ -247,4 +247,8 @@
       </li>
     </ol>
   </ng-template>
+
+  <ng-template prizmDocPageTab>
+    <prizm-openai-chat></prizm-openai-chat>
+  </ng-template>
 </prizm-doc-page>
