fix(doc/panel): remove panel breadcrumbs exemple as obsolete #2406

--- a/apps/doc/src/app/components/panel/examples/panel-example-with-instruments-hard/panel-example-with-instruments-hard.component.html
+++ b/apps/doc/src/app/components/panel/examples/panel-example-with-instruments-hard/panel-example-with-instruments-hard.component.html
@@ -80,8 +80,8 @@
       </div>
 
       <div class="instruments__group">
-        <button prizmButton appearance="success" size="m">Кнопка 2</button>
-        <button prizmButton appearance="primary" size="m">Кнопка</button>
+        <button prizmButton appearance="success" size="xm">Кнопка 2</button>
+        <button prizmButton appearance="primary" size="xm">Кнопка</button>
       </div>
     </div>
   </prizm-panel>
