feat(components/button): prizmButton without text should appear like [prizmIconButton] #2361

--- a/apps/doc/src/app/components/buttons/icon-button/examples/icons/icons-buttons-example.component.html
+++ b/apps/doc/src/app/components/buttons/icon-button/examples/icons/icons-buttons-example.component.html
@@ -104,3 +104,10 @@
     ></button>
   </div>
 </div>
+
+<div class="box">
+  <div class="title">[prizmButton] with Icon without text</div>
+  <div class="content">
+    <button [icon]="'user-card'" prizmButton appearanceType="fill" appearance="success" size="m"></button>
+  </div>
+</div>
